# PROOF

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  average_runs.py  default_config.json  rust-toolchain.toml  testing_config.json
.github/workflows/: checks.yml  security.yml  tests.yml
data/: Data.md  convert_data.py  environment.yml
run-configs/: all_operations.json  only_rol.json  only_rol_bigger_neighbourhood.json  only_rol_smaller_neighbourhood.json  with_iore.json  with_rfac.json  with_rfac_without_samp_polarities.json
src/: lib.rs  main.rs
tests/: clause.rs  dnf.rs
