# -----------------------------------------------
# ----  Package  --------------------------------
# -----------------------------------------------

[package]
name = 'yourprojectname'
version = '0.1.0'
edition = '2021'

authors = ['Maximilian Moeller']

description = ''
documentation = ''
license = 'GPL-3.0'
readme = 'README.md'

homepage = ''
repository = ''

keywords = [
    'template',
]

categories = [
    'command-line-utilities'
]

publish = false

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
codegen-units = 1
incremental = true
lto = true
overflow-checks = true

[profile.dev]
lto = false

# -----------------------------------------------
# ----  General Dependencies  -------------------
# -----------------------------------------------

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
log = "0.4.17"
env_logger = "0.9.0"
time = { version = "0.3.9", features = ['formatting', 'local-offset'] }

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = 'default'
