# -----------------------------------------------
# ----  Package  --------------------------------
# -----------------------------------------------

[package]
name = 'proof'
version = '0.1.0'
edition = '2021'

authors = ['Maximilian Moeller']

description = 'Implementation for my research project on local search for learning PaRtial bOOlean Functions.'
documentation = ''
license = 'GPL-3.0'
readme = 'README.md'

homepage = ''
repository = 'https://github.com/MMurmel/PROOF'

keywords = [
    'local_search',
    'binary_fuctions',
    'partial_functions',
    'machine_learning',
]

categories = [
    'algorithms',
    'data-structures',
    'science',
    'command-line-utilities'
]

publish = false

# -----------------------------------------------
# ----  Profiles  -------------------------------
# -----------------------------------------------

[profile.release]
codegen-units = 1
incremental = true
lto = true
overflow-checks = true

[profile.dev]
lto = false

# -----------------------------------------------
# ----  General Dependencies  -------------------
# -----------------------------------------------

[dependencies]
# CLI Arguments
clap = { version = "3.2.14", features = ["derive"] }
clap-verbosity-flag = "1.0.0"
# Logging
log = "0.4.17"
env_logger = "0.9.0"
time = { version = "0.3.9", features = ['formatting', 'local-offset'] }
# Serialization and Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Random number generator
rand = "0.8.5"
# Image creation
image = "0.24.3"
rayon = "1.5"

# -----------------------------------------------
# ----  Workspace  ------------------------------
# -----------------------------------------------

[workspace]

# -----------------------------------------------
# ----  Tests  ----------------------------------
# -----------------------------------------------

[[test]]
name = 'default'
